--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,9 @@ code {
   color: white;
   padding: 20px;
   overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .breadcrumbs {
